apps/20-media/music-assistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  selector:
    app: music-assistant
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
