apps/20-media/music-assistant/base/ingressroute-slimproto.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: music-assistant-slimproto-tcp
spec:
  entryPoints:
    - slimproto-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: music-assistant
          port: 3483
