apps/20-media/music-assistant/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: music-assistant
spec:
  endpointSelector:
    matchLabels:
      app: music-assistant
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8095"
              protocol: TCP
  egress:
    - {}
